# ai-code

./: agent-design-secrets.md  ai-agent-patterns.md  component-patterns.md  module-deep-dive.md  new-tech-findings.md  rare-tech-deep-dive.md  system-prompt-analysis.md  tui-implementation.md
docs/: harness-engineering-notes.md
pyagent/: README.md  pyproject.toml  settings.example.json
pyagent/src/pyagent/: __init__.py  config.py
pyagent/src/pyagent/cli/: main.py
pyagent/src/pyagent/core/: message.py  query_engine.py  types.py
pyagent/src/pyagent/llm/: __init__.py  anthropic.py  base.py
pyagent/src/pyagent/ops/: __init__.py  alert.py  ecom.py  ticket.py
pyagent/src/pyagent/tools/: __init__.py  base.py  executor.py  registry.py
pyagent/src/pyagent/tools/builtin/: __init__.py  bash.py  http.py  search.py
pyagent/tests/: __init__.py
wechat-series/: 00-目录规划.md  01-泄漏事件始末.md  02-整体架构.md  03-对话循环.md  04-AsyncGenerator.md  05-上下文管理.md  06-权限系统.md  07-多Agent协作.md  08-工程模式总结.md
